InsuranceOrg/force-app/main/default/objects/vlocity_ins__BusinessSite__c/fields/vlocity_ins__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OperatingHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>vlocity_ins__OperatingHours__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>