InsuranceOrg/force-app/main/default/objects/vlocity_ins__BusinessSite__c/fields/vlocity_ins__OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrganizationId__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>OrganizationSites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>