InsuranceOrg/force-app/main/default/objects/vlocity_ins__BusinessSite__c/fields/vlocity_ins__StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StreetAddress__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>